Se agrego el fondo al proyecto

--- a/codigo.css
+++ b/codigo.css
@@ -252,7 +252,7 @@ a:hover {
 }
 
 body {
-    background-image: url('file:///C:/Users/Mati/Desktop/Fondo%20Portfolio.jpg');
+    background-image: url('Imag/Fondo\ Portfolio.jpg');
     background-size: cover;
     background-position: center;
 }
