Nueva prueba para fondo

--- a/codigo.css
+++ b/codigo.css
@@ -252,7 +252,7 @@ a:hover {
 }
 
 body {
-    background-image: url('Imag/Fondo\ Portfolio.jpg');
+    background-image: url('https://github.com/mativelazquezsegovia/Proyecto-Portfolio/blob/main/Imag/Fondo%20Portfolio.jpg?raw=true');
     background-size: cover;
     background-position: center;
 }
